--- a/frontend/toDo/src/app/home/home.component.html
+++ b/frontend/toDo/src/app/home/home.component.html
@@ -14,8 +14,8 @@
                         <span class="title">Sobre nós</span>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="how-are eight wide column">
+                <div class="row center aligned">
+                    <div class="how-are sixteen wide column">
                         Com objetivo de facilitar a sua vida, desenvolvemos uma aplicação simples e fácil de ser utilizada.
                         Com ela você pode:
                         <ul>
@@ -25,9 +25,16 @@
                             <li>Permitir que outros editem suas tarefas;</li>
                             <li>E muito mais!</li>
                         </ul>
-                    </div>
-                    <div class="how-are eight wide column">
                         Veja abaixo como é simples criar uma tarefa, e compartilha-lá com outros:
+                        Após realizar o login em nossa plataforma, clique no icone de mais no canto da página para criar uma lista:
+                        <img src="assets/print-1.png" />
+                        <img src="assets/print-2.png" /><br/>
+                        Você será então direcionado para a página de edição da lista, onde poderá incluir itens na lista e agrupa-los:
+                        <img src="assets/print-3.png" />
+                        <img src="assets/print-4.png" />
+                        <img src="assets/print-5.png" />
+                        Ao voltar para a listagem, você verá as opções para editar as listas já existentes e compartilha-lás por e-mail.
+                        <img src="assets/print-6.png" />
                     </div>
                 </div>
             </div>
