--- a/frontend/toDo/src/app/home/home.component.scss
+++ b/frontend/toDo/src/app/home/home.component.scss
@@ -69,8 +69,14 @@
                 color: var(--color-primary);
             }
 
-            li::marker {
-                color: var(--color-primary);
+            ul{
+                list-style-type: none;
+            }
+
+            img{
+                border: 1px solid var(--color-light-gray);
+                border-radius: 5px;
+                margin: var(--space-xl);
             }
         }
 
