--- a/frontend/toDo/src/styles.scss
+++ b/frontend/toDo/src/styles.scss
@@ -3,6 +3,8 @@
     --color-white: #fff;
     --color-red: #fd397a;
     --color-primary: #440381;
+    --color-light-gray: #e1e1e1;
+    --color-green: #28a745;
 
     --space-sm: 12px;
     --space-md: 20px;
@@ -18,4 +20,59 @@
 
 *{
     font-family: 'Montserrat', sans-serif;
+}
+
+.loading {
+	&:before {
+		content: "";
+		box-sizing: border-box;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: 50px;
+		height: 50px;
+		margin-top: -25px;
+		margin-left: -25px;
+		border-radius: 50%;
+		border: 1px solid #ccc;
+		border-top-color: #07d;
+		animation: spinner 0.6s linear infinite;
+		z-index: 21;
+	}
+
+	&:after {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: #fff;
+		opacity: 0.5;
+		z-index: 20;
+	}
+}
+
+@-webkit-keyframes spinner {
+	from {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+
+	to {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes spinner {
+	from {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+
+	to {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
 }
