--- a/frontend/toDo/src/app/home/home.component.scss
+++ b/frontend/toDo/src/app/home/home.component.scss
@@ -76,7 +76,7 @@
             img{
                 border: 1px solid var(--color-light-gray);
                 border-radius: 5px;
-                margin: var(--space-xl);
+                margin: var(--space-xl) 0;
             }
         }
 
