--- a/frontend/toDo/src/app/home/home.component.html
+++ b/frontend/toDo/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="content">
         <div class="main-image">
             <img class="banner" src="assets/banner.png" />
-            <span class="main-text">Suas tarefas na palma da mão de forma descomplicada!</span>
+            <span class="main-text">Seus ToDo's na palma da mão de forma descomplicada!</span>
             <img class="main-image" src="assets/phone-hand.png" />
         </div>
 
@@ -19,13 +19,13 @@
                         Com objetivo de facilitar a sua vida, desenvolvemos uma aplicação simples e fácil de ser utilizada.
                         Com ela você pode:
                         <ul>
-                            <li>Criar tarefas;</li>
-                            <li>Criar itens dentro das tarefas (Como se fossem um passo à passo);</li>
-                            <li>Compartilhar tarefas com outras pessoas;</li>
-                            <li>Permitir que outros editem suas tarefas;</li>
+                            <li>Criar ToDo's;</li>
+                            <li>Criar itens dentro dos ToDo's (Como se fossem um passo à passo);</li>
+                            <li>Compartilhar ToDo's com outras pessoas;</li>
+                            <li>Permitir que outros editem suas ToDo's;</li>
                             <li>E muito mais!</li>
                         </ul>
-                        Veja abaixo como é simples criar uma tarefa, e compartilha-lá com outros:
+                        Veja abaixo como é simples criar uma ToDo's, e compartilha-lá com outros:
                         Após realizar o login em nossa plataforma, clique no icone de mais no canto da página para criar uma lista:
                         <img src="assets/print-1.png" />
                         <img src="assets/print-2.png" /><br/>
